# WheelLeg-technical-verification

./: .JLinkScripts  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  LICENSE  README.md  WheelLeg-test.ioc
Application/: CMakeLists.txt
Application/include/: tasks.hpp
Application/include/PHOENIX/Filter/: Mahony.hpp
Application/include/PHOENIX/Math/: Matrix.hpp  Quaternion.hpp  Trigonometric.hpp  Vector.hpp
Application/include/WheelLeg/: tasks.hpp
Application/src/PHOENIX/Filter/: Mahony.cpp
Application/src/PHOENIX/Math/: Quaternion.cpp  Trigonometric.cpp
Application/src/WheelLeg/tasks/: TaskLed.cpp  TaskReadDbus.cpp  TaskSensor.cpp  TaskWheel.cpp  tasks.cpp
Application/tasks/: TaskJoint.cpp  TaskLed.cpp  TaskReadDbus.cpp  TaskSensor.cpp  TaskWheel.cpp  tasks.cpp
PHOENIX/: CMakeLists.txt
PHOENIX/BaseControl/Connectivity/CAN/: CAN.cpp
PHOENIX/BaseControl/Connectivity/I2C/: I2C.cpp
PHOENIX/BaseControl/Connectivity/SPI/: SPI.cpp
PHOENIX/BaseControl/Connectivity/UART/: DBUS.cpp  UART.cpp
PHOENIX/BaseControl/Controller/: adrcController.cpp  pidController.cpp
PHOENIX/BaseControl/Motor/: DM4310.cpp  Motor.cpp  RM3508.cpp
PHOENIX/BaseControl/Sensor/: Sensor.cpp
PHOENIX/BaseControl/Sensor/BMI088/: BMI088.cpp
PHOENIX/BaseControl/Sensor/IST8310/: IST8310.cpp
PHOENIX/Filter/: Mahony.cpp
PHOENIX/Math/: Quaternion.cpp  Trigonometric.cpp
PHOENIX/Utils/: buzzer.cpp  note.cpp
PHOENIX/include/Filter/: Mahony.hpp
PHOENIX/include/Math/: Math.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
PHOENIX/include/Utils/: buzzer.hpp  music.hpp  note.hpp
(+79 files in other folders)
